[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfract-modulizer"
version = "0.1.0"
description = "Split a large Python file into modular package outputs with CLI and GUI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Pyfract Contributors" }]
keywords = ["python", "refactor", "modularization", "ast", "cli", "gui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "typer>=0.12.0",
  "openai>=1.30.0",
]

[project.scripts]
pyfract-modulizer = "pyfract:main"

[project.gui-scripts]
pyfract-modulizer-gui = "pyfract_gui:main"

[tool.setuptools]
py-modules = ["pyfract", "pyfract_gui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfract_core*"]
